--- a/Widget/Base.lproj/MainInterface.storyboard
+++ b/Widget/Base.lproj/MainInterface.storyboard
@@ -10,7 +10,7 @@
         <!--Today View Controller-->
         <scene sceneID="cwh-vc-ff4">
             <objects>
-                <viewController id="M4Y-Lb-cyx" customClass="TodayViewController" customModule="Widget" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="M4Y-Lb-cyx" customClass="TodayViewController" customModule="자율출퇴근러" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" simulatedAppContext="notificationCenter" id="S3S-Oj-5AN">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -33,54 +33,40 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="출근:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Isr-tp-hyi">
-                                <rect key="frame" x="10" y="56" width="28.5" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="퇴근까지:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C4n-aJ-Tks">
-                                <rect key="frame" x="10" y="77" width="52.5" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMn-q9-c7D">
-                                <rect key="frame" x="46.5" y="56" width="36" height="17"/>
+                                <rect key="frame" x="10" y="58" width="300" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2sO-kE-Z8E">
-                                <rect key="frame" x="70.5" y="77" width="35.5" height="17"/>
+                                <rect key="frame" x="10" y="79" width="300" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f8V-Ii-xtU">
-                                <rect key="frame" x="10" y="56" width="300" height="17"/>
+                                <rect key="frame" x="10" y="58" width="300" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="2sO-kE-Z8E" firstAttribute="centerY" secondItem="C4n-aJ-Tks" secondAttribute="centerY" id="0wX-gi-TOn"/>
+                            <constraint firstItem="2sO-kE-Z8E" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" constant="10" id="0Lw-c0-RDR"/>
+                            <constraint firstItem="ssy-KU-ocm" firstAttribute="trailing" secondItem="sMn-q9-c7D" secondAttribute="trailing" constant="10" id="0aw-ql-ccQ"/>
+                            <constraint firstItem="sMn-q9-c7D" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" constant="10" id="0s0-DK-vmf"/>
                             <constraint firstItem="wVp-De-0Bi" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" constant="2" id="5Sd-bX-XFX"/>
                             <constraint firstAttribute="centerX" secondItem="JXA-t7-8Rd" secondAttribute="trailing" constant="6" id="7YK-QA-bya"/>
-                            <constraint firstItem="Isr-tp-hyi" firstAttribute="top" secondItem="JXA-t7-8Rd" secondAttribute="bottom" constant="8" id="EYM-XR-FMV"/>
-                            <constraint firstItem="sMn-q9-c7D" firstAttribute="leading" secondItem="Isr-tp-hyi" secondAttribute="trailing" constant="8" id="H2y-Fo-sij"/>
+                            <constraint firstItem="sMn-q9-c7D" firstAttribute="top" secondItem="JXA-t7-8Rd" secondAttribute="bottom" constant="10" id="JyV-kg-7Ht"/>
                             <constraint firstAttribute="trailing" secondItem="f8V-Ii-xtU" secondAttribute="trailing" constant="10" id="KAH-EK-Z6c"/>
                             <constraint firstItem="wVp-De-0Bi" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="centerX" constant="6" id="OkV-IR-Etn"/>
-                            <constraint firstItem="sMn-q9-c7D" firstAttribute="centerY" secondItem="Isr-tp-hyi" secondAttribute="centerY" id="Qb5-9a-seY"/>
                             <constraint firstItem="JXA-t7-8Rd" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" constant="10" id="VCz-Fh-Oy2"/>
                             <constraint firstAttribute="trailing" secondItem="wVp-De-0Bi" secondAttribute="trailing" constant="10" id="YgG-2k-hza"/>
                             <constraint firstItem="f8V-Ii-xtU" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" constant="10" id="cF6-Ws-UG4"/>
-                            <constraint firstItem="Isr-tp-hyi" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" constant="10" id="f68-db-LpN"/>
-                            <constraint firstItem="C4n-aJ-Tks" firstAttribute="top" secondItem="Isr-tp-hyi" secondAttribute="bottom" constant="4" id="sR5-yI-nSH"/>
-                            <constraint firstItem="f8V-Ii-xtU" firstAttribute="top" secondItem="JXA-t7-8Rd" secondAttribute="bottom" constant="8" id="sie-SP-aiS"/>
-                            <constraint firstItem="2sO-kE-Z8E" firstAttribute="leading" secondItem="C4n-aJ-Tks" secondAttribute="trailing" constant="8" id="ufT-af-hBt"/>
-                            <constraint firstItem="C4n-aJ-Tks" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" constant="10" id="ufb-6p-JbW"/>
+                            <constraint firstItem="2sO-kE-Z8E" firstAttribute="top" secondItem="f8V-Ii-xtU" secondAttribute="bottom" constant="4" id="jMO-cT-eag"/>
+                            <constraint firstItem="ssy-KU-ocm" firstAttribute="trailing" secondItem="2sO-kE-Z8E" secondAttribute="trailing" constant="10" id="ovd-OD-4Fd"/>
+                            <constraint firstItem="f8V-Ii-xtU" firstAttribute="top" secondItem="JXA-t7-8Rd" secondAttribute="bottom" constant="10" id="sie-SP-aiS"/>
                             <constraint firstItem="JXA-t7-8Rd" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" constant="2" id="vbZ-1I-mZl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ssy-KU-ocm"/>
@@ -91,11 +77,9 @@
                     <connections>
                         <outlet property="alertLabel" destination="f8V-Ii-xtU" id="qlQ-Qi-0rf"/>
                         <outlet property="endButton" destination="wVp-De-0Bi" id="18m-Vv-IME"/>
-                        <outlet property="endTitleLabel" destination="C4n-aJ-Tks" id="viu-Dl-fOx"/>
                         <outlet property="remainTimeLabel" destination="2sO-kE-Z8E" id="ecA-to-LqO"/>
                         <outlet property="startButton" destination="JXA-t7-8Rd" id="Dcg-Vo-05g"/>
                         <outlet property="startTimeLabel" destination="sMn-q9-c7D" id="hmE-K2-lci"/>
-                        <outlet property="startTitleLabel" destination="Isr-tp-hyi" id="2sP-y9-FHx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vXp-U4-Rya" userLabel="First Responder" sceneMemberID="firstResponder"/>
