--- a/Widget/Base.lproj/MainInterface.storyboard
+++ b/Widget/Base.lproj/MainInterface.storyboard
@@ -24,12 +24,30 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pdd-OH-yne" userLabel="OK" customClass="WidgetButton" customModule="자율출퇴근러" customModuleProvider="target">
+                                <rect key="frame" x="10" y="2" width="144" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="FS1-9L-fNa"/>
+                                </constraints>
+                                <state key="normal" title="확인">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wVp-De-0Bi" customClass="WidgetButton" customModule="자율출퇴근러" customModuleProvider="target">
                                 <rect key="frame" x="166" y="2" width="144" height="46"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="46" id="k9H-Ba-piP"/>
                                 </constraints>
                                 <state key="normal" title="퇴근">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vG4-j4-8GO" userLabel="Cancel" customClass="WidgetButton" customModule="자율출퇴근러" customModuleProvider="target">
+                                <rect key="frame" x="166" y="2" width="144" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="XvE-kF-U9B"/>
+                                </constraints>
+                                <state key="normal" title="취소">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
@@ -58,16 +76,22 @@
                             <constraint firstItem="sMn-q9-c7D" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" constant="10" id="0s0-DK-vmf"/>
                             <constraint firstItem="wVp-De-0Bi" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" constant="2" id="5Sd-bX-XFX"/>
                             <constraint firstAttribute="centerX" secondItem="JXA-t7-8Rd" secondAttribute="trailing" constant="6" id="7YK-QA-bya"/>
+                            <constraint firstItem="vG4-j4-8GO" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" constant="2" id="HeN-EC-nUx"/>
                             <constraint firstItem="sMn-q9-c7D" firstAttribute="top" secondItem="JXA-t7-8Rd" secondAttribute="bottom" constant="10" id="JyV-kg-7Ht"/>
                             <constraint firstAttribute="trailing" secondItem="f8V-Ii-xtU" secondAttribute="trailing" constant="10" id="KAH-EK-Z6c"/>
                             <constraint firstItem="wVp-De-0Bi" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="centerX" constant="6" id="OkV-IR-Etn"/>
                             <constraint firstItem="JXA-t7-8Rd" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" constant="10" id="VCz-Fh-Oy2"/>
+                            <constraint firstItem="JXA-t7-8Rd" firstAttribute="trailing" secondItem="Pdd-OH-yne" secondAttribute="trailing" id="YFq-O1-P9w"/>
                             <constraint firstAttribute="trailing" secondItem="wVp-De-0Bi" secondAttribute="trailing" constant="10" id="YgG-2k-hza"/>
+                            <constraint firstItem="vG4-j4-8GO" firstAttribute="trailing" secondItem="wVp-De-0Bi" secondAttribute="trailing" id="bal-FG-hFt"/>
                             <constraint firstItem="f8V-Ii-xtU" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" constant="10" id="cF6-Ws-UG4"/>
+                            <constraint firstItem="Pdd-OH-yne" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" constant="2" id="ghC-LT-2fc"/>
                             <constraint firstItem="2sO-kE-Z8E" firstAttribute="top" secondItem="f8V-Ii-xtU" secondAttribute="bottom" constant="4" id="jMO-cT-eag"/>
+                            <constraint firstItem="vG4-j4-8GO" firstAttribute="leading" secondItem="wVp-De-0Bi" secondAttribute="leading" id="lTg-B3-M1O"/>
                             <constraint firstItem="ssy-KU-ocm" firstAttribute="trailing" secondItem="2sO-kE-Z8E" secondAttribute="trailing" constant="10" id="ovd-OD-4Fd"/>
                             <constraint firstItem="f8V-Ii-xtU" firstAttribute="top" secondItem="JXA-t7-8Rd" secondAttribute="bottom" constant="10" id="sie-SP-aiS"/>
                             <constraint firstItem="JXA-t7-8Rd" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" constant="2" id="vbZ-1I-mZl"/>
+                            <constraint firstItem="Pdd-OH-yne" firstAttribute="leading" secondItem="JXA-t7-8Rd" secondAttribute="leading" id="wKz-AN-qcC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ssy-KU-ocm"/>
                     </view>
@@ -76,7 +100,9 @@
                     <size key="freeformSize" width="320" height="110"/>
                     <connections>
                         <outlet property="alertLabel" destination="f8V-Ii-xtU" id="qlQ-Qi-0rf"/>
+                        <outlet property="cancelButton" destination="vG4-j4-8GO" id="Jgq-3F-HNu"/>
                         <outlet property="endButton" destination="wVp-De-0Bi" id="18m-Vv-IME"/>
+                        <outlet property="okButton" destination="Pdd-OH-yne" id="WfI-4O-oWX"/>
                         <outlet property="remainTimeLabel" destination="2sO-kE-Z8E" id="ecA-to-LqO"/>
                         <outlet property="startButton" destination="JXA-t7-8Rd" id="Dcg-Vo-05g"/>
                         <outlet property="startTimeLabel" destination="sMn-q9-c7D" id="hmE-K2-lci"/>
